Working on GLTF/GLB model loading + Switching to using .basis textures, supports transcoding to DXT or ETC1 with a feature flag

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.ktx filter=lfs diff=lfs merge=lfs -text
 *.bsp filter=lfs diff=lfs merge=lfs -text
+*.basis filter=lfs diff=lfs merge=lfs -text
+*.glb filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
