--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,16 @@ edition = "2021"
 
 [features]
 gles2 = []
+use_etc1 = []
 
 [dependencies]
 byteorder = "1.5.0"
 sdl2 = "0.37.0"
 regex = "1.11.1"
 gl = "0.14.0"
-ktx = "0.3.2"
 lazy_static = "1.5.0"
 hecs = "0.10.5"
 rect_packer = "0.2.1"
 toml = "0.8.20"
+gltf = "1.4.1"
+basis-universal = "0.3.1"
