--- a/content/materials/brick.toml
+++ b/content/materials/brick.toml
@@ -1,4 +1,4 @@
 shader = "content/shaders/map_shader.toml"
 
 [texture2D]
-mainTexture = { path = "content/textures/brick.ktx", filter = true, wrap_s = true, wrap_t = true }
+mainTexture = { path = "content/textures/brick.basis", filter = true, wrap_s = true, wrap_t = true }
