--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ toml = "0.8.20"
 gltf = "1.4.1"
 basis-universal = "0.3.1"
 rayon = "1.10.0"
+serde = { version = "1.0.219", features = ["derive"] }
+ron = "0.10.1"
