--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.basis filter=lfs diff=lfs merge=lfs -text
 *.glb filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
+*.qoi filter=lfs diff=lfs merge=lfs -text
