--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ basis-universal = "0.3.1"
 rayon = "1.10.0"
 serde = { version = "1.0.219", features = ["derive"] }
 ron = "0.10.1"
+rand = "0.9.1"
+qoi = "0.4.1"
