--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ qoi = "0.4.1"
 noise = "0.9.0"
 imgui = "0.12.0"
 imgui-sdl2-support = "0.13.0"
+log = "0.4.27"
+shellwords = "1.1.0"
+clap = { version = "4.5.37", features = ["derive"] }
