Working on UI painting & text rendering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ imgui-sdl2-support = "0.13.0"
 log = "0.4.27"
 shellwords = "1.1.0"
 clap = { version = "4.5.37", features = ["derive"] }
+fontdue = "0.9.3"
